feat: body template reset password mail

--- a/src/infrastructure/views/mails/reset-password.hbs
+++ b/src/infrastructure/views/mails/reset-password.hbs
@@ -1,3 +1,7 @@
 <p>Olá {{email}},</p>
-<p>Segue o link</p>
-<a href={{link}}>Click aqui</a>
+<p>Recebemos uma solicitação para redefinir a senha da conta Localhost associada ao e-mail {{email}}.</p>
+<a href={{link}}>Redefina sua senha</a>
+<p>Se você não tiver solicitado a redefinição da senha, entre em contato conosco por meio de nosso site de suporte.
+  Nenhuma mudança foi feita na sua conta.</p>
+<p>Problemas no login? Fale com o Suporte da Localhost. </p>
+<p>— Equipe da Localhost</p>
